--- a/mysite/main/templates/main/header.html
+++ b/mysite/main/templates/main/header.html
@@ -16,7 +16,7 @@
 
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Tutorials by Farid</a>
+        <a href="#" class="brand-logo">Tutorials</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="#">Home</a></li>
           <li><a href="#">Register</a></li>
