--- a/mysite/main/templates/main/header.html
+++ b/mysite/main/templates/main/header.html
@@ -18,15 +18,17 @@
       <div class="nav-wrapper">
         <a href="#" class="brand-logo">Tutorials</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Register</a></li>
-          <li><a href="#">Login</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/register">Register</a></li>
+          <li><a href="/login">Login</a></li>
         </ul>
       </div>
     </nav>
-
-    {% block content %}
-    {% endblock %}
+    <div class="container">
+      <br>
+      {% block content %}
+      {% endblock %}
+    </div>
 
     <!-- Prism JS -->
     <script src="{% static "tinymce/js/prism.js" %}"></script>
