--- a/mysite/main/templates/main/header.html
+++ b/mysite/main/templates/main/header.html
@@ -10,20 +10,11 @@
       <!-- Compiled and minified JavaScript for Materialize CSS -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
-
-
   <body>
 
-    <nav>
-      <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Tutorials</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="/">Home</a></li>
-          <li><a href="/register">Register</a></li>
-          <li><a href="/login">Login</a></li>
-        </ul>
-      </div>
-    </nav>
+    {% include "main/includes/navbar.html" %}
+    {% include "main/includes/messages.html" %}
+
     <div class="container">
       <br>
       {% block content %}
