added sidebar and finished UI

--- a/mysite/main/templates/main/header.html
+++ b/mysite/main/templates/main/header.html
@@ -23,7 +23,11 @@
 
     <!-- Prism JS -->
     <script src="{% static "tinymce/js/prism.js" %}"></script>
+
   </body>
 
+  <script>
+  M.AutoInit();
+</script>
 
 </html>
